# cryptomite

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  bibliography.html  cryptomite.html  genindex.html  get_extractor_params.py  gettingstarted.html  glossary.html  index.html  intro.html  na_set.txt  notebooks.html  objects.inv  performance.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: build-docs  build_test.yml  clear-target-files  docs.yml  linuxbuildwheels  macosbuildwheel  wheels.yml
_modules/: index.html
_modules/cryptomite/: circulant.html  dodis.html  raz.html  toeplitz.html  trevisan.html  utils.html
_sources/: bibliography.rst.txt  cryptomite.rst.txt  gettingstarted.rst.txt  index.rst.txt  intro.rst.txt  notebooks.rst.txt  performance.rst.txt
_sources/examples/: example.ipynb.txt  quantum-key-distribution.ipynb.txt  quantum-random-number-generation.ipynb.txt
_static/: documentation_options.js
bench/: bench.py
cryptomite/: Bits_int_class.py  CMakeLists.txt  __init__.py  circulant.py  dodis.py  pycryptomite.cpp  raz.py  toeplitz.py  trevisan.py  utils.py
docs/: bibliography.rst  conf.py  cryptomite.rst  extlib.rst  gettingstarted.rst  glossary.rst  index.rst  intro.rst  modules.rst  notebooks.rst  performance.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  extlib.doctree  glossary.doctree  index.doctree  intro.doctree  modules.doctree
docs/_build/html/: .buildinfo  extlib.html  genindex.html  glossary.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/extlib/: dodis.html  hayashi.html  toeplitz.html  trevisan.html  utils.html
docs/_build/html/_sources/: extlib.rst.txt  index.rst.txt  intro.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/examples/: example.ipynb  quantum-key-distribution.ipynb  quantum-random-number-generation.ipynb
examples/: example.html  example.ipynb  quantum-key-distribution.html  quantum-key-distribution.ipynb  quantum-random-number-generation.html  quantum-random-number-generation.ipynb
extlib/: CMakeLists.txt  __init__.py  dodis.py  hayashi.py  pyextlib.cpp  pytrevisan.cpp  toeplitz.py  trevisan.py  utils.py
extlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: CMakeLists.txt  bigntt.cpp  bigntt.h  irreducible_poly.cpp  irreducible_poly.h  irreducible_poly.hpp  ntt.cpp  ntt.h  trevisan.cpp  trevisan.h
test/: CMakeLists.txt  bits_int_test.py  test_circulant.py  test_dodis.py  test_ntt.py  test_toeplitz.py  test_vn.py  tests.cpp
