[metadata]
name = extlib 
description = An awesome extractor library
long_description = file: README.md
long_description_content_type = text/markdown
author = Cambridge Quantum
author_email = richie.yeung@cambridgequantum.com
license = Apache-2.0
license_files = file: LICENSE
keywords =
    quantum
    quantum computing
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages =
    extlib
install_requires =
    discopy >= 0.4.2
    pytket >= 0.19.2
    pyyaml
    spacy >= 3.0
    tensornetwork
    torch >= 1.10.1
    transformers
python_requires = >=3.8

