[metadata]
name = cryptomite
description = An awesome extractor library
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.2.2
author = Cambridge Quantum
author_email = qcrypto@cambridgequantum.com
license_files = file: LICENSE
keywords =
    quantum
    quantum computing
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages =
    cryptomite
install_requires =
python_requires = >=3.8

[flake8]
ignore =
    # The default list except for W504 (line break after binary operator) 
    # and E741 (ambiguous variable name 'l')
    E121,E123,E126,E226,E24,E704,E741,W503
